@@ -1,3 +1,4 @@
+- STARKA-275 prevent phaser from causing memory exaustion for amplicon input
 - STARKA-279 prevent rare vcf syntax error in gVCF when ALT is repeated
 - STARKA-284 update license to GPLv3
 - WGSW-765 Failed SNV phasing if any of the original SNVs are not represented
